Refactoring model classes